--- a/README.Rmd
+++ b/README.Rmd
@@ -1,34 +1,45 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
-DataflowR
-=========
+
+```{r, echo = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "images/"
+)
+```
+
+# DataflowR
 
 [![Project Status: Active - The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
 
 The `DataflowR` package is used to handle streaming output and discrete grab samples collected as part of the South Florida Water Mangement District's Florida Bay Dataflow monitoring program.
 
-Installation
-------------
+## Installation
 
 You can install DataflowR from github with:
 
-``` r
+```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("jsta/DataflowR")
 ```
 
-Function Documentation and Examples
------------------------------------
+## Function Documentation and Examples
 
 see either:
 
--   the vignette at `doc/DataflowR.pdf`
+* the vignette at `doc/DataflowR.pdf`
 
--   `??DataflowR` from the `R` console
+* `??DataflowR` from the `R` console
 
-References
-----------
+## References
 
-**Joseph Stachelek and Christopher J. Madden (2015)**. Application of Inverse Path Distance weighting for high density spatial mapping of coastal water quality patterns. *International Journal of Geographical Information Science* [preprint](http://jsta.github.io/public/stachmadden2015am.pdf) | [journal](http://dx.doi.org/10.1080/13658816.2015.1018833)
+**Joseph Stachelek and Christopher J. Madden (2015)**. Application of Inverse Path Distance weighting for high density spatial mapping of coastal water quality patterns.
+*International Journal of Geographical Information Science*
+[preprint](http://jsta.github.io/public/stachmadden2015am.pdf) | [journal](http://dx.doi.org/10.1080/13658816.2015.1018833)
 
 **Joseph Stachelek, Christopher J. Madden, Stephen Kelly, Michelle Blaha (submitted)**. Fine-scale relationships between phytoplankton abundance and environmental drivers in Florida Bay, USA.
+
